--- a/index.html
+++ b/index.html
@@ -1,36 +1,44 @@
-from telegram import Update, InlineKeyboardButton, InlineKeyboardMarkup
-from telegram.ext import Application, CommandHandler
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Watch Ads</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f4f4f9;
+            text-align: center;
+        }
+        .content {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div class="content">
+        <h1>Watch Ads</h1>
+        <p>Ads will appear shortly...</p>
+    </div>
 
-# Bot Token
-BOT_TOKEN = "8037333197:AAHSV978QA1wckKEEnm9FonPdo9VFYeOcnQ"
-# Hosted Mini App URL
-MINI_APP_URL = "https://examplekjhfgi.github.io/telegram-mini-app/"
+    <!-- Monetag Ad Script -->
+    <script src="//niphaumeenses.net/vignette.min.js" data-zone="8591664" data-sdk="show_8591664"></script>
 
-# Start Command Handler
-async def start(update: Update, context):
-    keyboard = [
-        [
-            InlineKeyboardButton(
-                "Watch Ads", url=f"https://t.me/{context.bot.username}?startapp={MINI_APP_URL}"
-            )
-        ]
-    ]
-    reply_markup = InlineKeyboardMarkup(keyboard)
-    await update.message.reply_text(
-        "Click 'Watch Ads' to view the ads.", reply_markup=reply_markup
-    )
-
-# Main Function
-async def main():
-    # Initialize the bot application
-    application = Application.builder().token(BOT_TOKEN).build()
-
-    # Command Handlers
-    application.add_handler(CommandHandler("start", start))
-
-    # Run the bot
-    await application.run_polling()
-
-if __name__ == "__main__":
-    import asyncio
-    asyncio.run(main())
+    <script>
+        // Timer to refresh ads every 20 seconds
+        let timer = 20;
+        const countdown = setInterval(() => {
+            if (timer > 0) {
+                timer--;
+            } else {
+                window.location.reload(); // Refresh the page every 20 seconds
+            }
+        }, 1000);
+    </script>
+</body>
+</html>
