--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <!-- Monetag Ad Script -->
-    <script src="//niphaumeenses.net/vignette.min.js" data-zone="8591664" data-sdk="show_8591664"></script>
+    <script src='//niphaumeenses.net/vignette.min.js' data-zone='8591664' data-sdk='show_8591664'></script>
 
     <script>
         // Timer to refresh ads every 20 seconds
