--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
 <body>
     <div class="content">
         <h1>Watch Ads</h1>
+        <button onclick="window.location.href='https://zireemilsoude.net/4/8591665'">Watch Ads</button>
     </div>
-
-    <!-- Monetag Ad Script -->
-    <script src='//niphaumeenses.net/vignette.min.js' data-zone='8591664' data-sdk='show_8591664'></script>
 
     <script>
         // Timer to refresh ads every 20 seconds
